--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
             justify-content: center;
             margin: 1rem 0;
             padding: 10px;
+            position: relative;
+            overflow: hidden;
         }
         
         .qr-placeholder img {
@@ -307,6 +309,9 @@
             border: 0;
             transform: scale(0.4);
             transform-origin: top left;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         .connection-card input {
