--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
             width: 500px;
             height: 500px;
             border: 0;
-            transform: scale(0.4);
+            /* Ampliado para preencher melhor a caixa do QR */
+            transform: scale(0.72);
             transform-origin: top left;
             position: absolute;
             top: 0;
